[package]
name = "jellyclirs"
version = "0.1.0"
edition = "2021"
authors = ["Lorenzo Carbonell (a.k.a. atareao) <lorenzo.carbonell.cerezo@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "3.0.0", features = ["derive"]}
rodio = "0.14"
# Added due to reqwest dependency problems with cross-compiling
openssl = { version = "0.10", features = ["vendored"]}

[[bin]]
name = "jellyclirs"
path = "src/main.rs"
